assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
    
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* .logosymbol{
    position: relative;
    left: 20px;
    float: left;
    width: 50px;
    height: 50px;
} */


body{
    background-color: white;
    font-family: 'Montserrat', sans-serif;
    color: black; 
    font-size: 1rem;
    letter-spacing: 1px;
}

.navbar-expand-lg .navbar-nav .nav-link {
       padding-right: 8.5rem;
    padding-left: 5.5rem
}

.mybg{
    background-color: white;
    border-bottom: solid #f39a82 1px;
    
}
  
.mainlogo{
    position: absolute;
    top:70%;
    left:50%;
    transform: translate( -50%, -50%);
    widows: 100px;
    height: auto;
        }

section{
    min-height: 80vh;
}


footer {
    background-color: white;
    width: 100%;
    position: relative;
    top: 100px;
    border-top: solid #f39a82 1px;
       }

       h5{
           position: relative;
           top: 10px;
       }
/* footer logo */
.handlogo{
    width: 31px;
    height: 34.5px;
}
/* social media links in footer */
.social-links li a i{
    width: 50px;
    height: 50px;
    color: black;
    size: 100px;
   
}

/* subscribe form  */
.mailing-form,
.mailing-text {
    display: flex;
    width: 100%;
}
/* ​subscription input in footer */
.mailing-form input[type=text] {
    padding: 10px;
    border: 1px solid #a1b894;
    width: 100%;
    background: #fafafa;
}
​
.mailing-form button {
    width: 20%;
    padding: 10px;
    background: blue;
    color: #fafafa;
    border: 1px solid black;
    cursor: pointer;
}


/* about page */
.my-container{
    position: relative;
    top: 30px;
}

.beauty-woman{
    max-width: 100%;
    position: relative;
    
}

.abouttitle{
   font-family: Arial, Helvetica, sans-serif;
}

    
/* top section of page */


/* information section */

.my-container-2{
    position: relative;
    top: 100px;
}

    /* Team Pictures */
  

#meet-the-team{
text-align: center;
  
}

/* Shop Page */

.shop-image{
    object-fit: cover;
    width: 1450px;
    height: 500px;
    position: relative; right: 20px; 

}

#mycontainer{
    width: 1450px;
    height: 500px;
    position: relative; right: 150px;
    
}

